app/src/main/java/com/example/darkfox/trainingnotes/dto/errors/FirebaseRegisterException.kt
package com.example.darkfox.trainingnotes.dto.errors

class FirebaseRegisterException(val failCause:String = "") : Exception(failCause)